[ Mac WK2 ] Layout Test fast/mediastream/MediaStreamTrack-getSettings.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=196400 <rdar://problem/49567579>

Reviewed by Youenn Fablet.

Source/WebCore:

No new tests, this fixes a broken test.

* platform/mediastream/mac/MockRealtimeAudioSourceMac.h:
* platform/mediastream/mac/MockRealtimeAudioSourceMac.mm:
(WebCore::MockRealtimeAudioSourceMac::reconfigure): Reconfigure buffers as well.
(WebCore::MockRealtimeAudioSourceMac::render): Call reconfigure if the buffer isn't
configured correctly.
(WebCore::MockRealtimeAudioSourceMac::settingsDidChange): Call reconfigure.

* platform/mock/MockRealtimeAudioSource.cpp:
(WebCore::MockRealtimeAudioSource::MockRealtimeAudioSource): Set sample rate to default.

LayoutTests:

* fast/mediastream/MediaStreamTrack-getSettings.html: Cleanup test.
* platform/mac-wk2/TestExpectations: Unskip test.


Canonical link: https://commits.webkit.org/216215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250918 268f45cc-cd09-0410-ab3c-d52691b4dbfc